src/hci/src/gui_hci/backend/hci_script/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     statement -> command NEWLINE
Rule 4     statement -> DEV command NEWLINE
Rule 5     statement -> NEWLINE
Rule 6     statement -> error NEWLINE
Rule 7     command -> FOR ID ASSIGN expr TO expr optstep optlvlinc
Rule 8     command -> FOR ID ASSIGN error TO expr optstep optlvlinc
Rule 9     command -> FOR ID ASSIGN expr TO error optstep optlvlinc
Rule 10    command -> FOR ID ASSIGN expr TO expr STEP error
Rule 11    command -> IF boolexpr optlvlinc
Rule 12    command -> IF expr optlvlinc
Rule 13    command -> IF error optlvlinc
Rule 14    command -> optlvldec ELSE IF boolexpr optlvlinc
Rule 15    command -> optlvldec ELSE IF error optlvlinc
Rule 16    command -> optlvldec ELSE optlvlinc
Rule 17    command -> WHILE boolexpr optlvlinc
Rule 18    command -> WHILE bool optlvlinc
Rule 19    command -> WHILE error optlvlinc
Rule 20    command -> ADD_DEV ID expr
Rule 21    command -> ADD_DEV ID error
Rule 22    command -> CMD
Rule 23    command -> CMD RETASSIGN ID
Rule 24    command -> CMD paramlist
Rule 25    command -> CMD paramlist RETASSIGN ID
Rule 26    command -> CMD error
Rule 27    command -> WAIT expr
Rule 28    command -> WAIT error
Rule 29    command -> ID ASSIGN expr
Rule 30    command -> ID ASSIGN error
Rule 31    command -> STEPIN
Rule 32    command -> STEPOUT
Rule 33    command -> PRINT expr
Rule 34    optstep -> STEP expr
Rule 35    optstep -> empty
Rule 36    optlvlinc -> STEPIN
Rule 37    optlvlinc -> empty
Rule 38    optlvldec -> STEPOUT
Rule 39    optlvldec -> empty
Rule 40    boolexpr -> relexpr
Rule 41    boolexpr -> boolexpr AND boolexpr
Rule 42    boolexpr -> boolexpr OR boolexpr
Rule 43    boolexpr -> NOT boolexpr
Rule 44    relexpr -> expr LT expr
Rule 45    relexpr -> expr LTE expr
Rule 46    relexpr -> expr GT expr
Rule 47    relexpr -> expr GTE expr
Rule 48    relexpr -> expr EQUAL expr
Rule 49    relexpr -> expr NOTEQUAL expr
Rule 50    expr -> expr PLUS expr
Rule 51    expr -> expr MINUS expr
Rule 52    expr -> expr MUL expr
Rule 53    expr -> expr DIV expr
Rule 54    expr -> expr MOD expr
Rule 55    expr -> expr POWER expr
Rule 56    expr -> expr BITWISEAND expr
Rule 57    expr -> expr BITWISEOR expr
Rule 58    expr -> expr BITWISEXOR expr
Rule 59    expr -> expr BITWISELS INT
Rule 60    expr -> expr BITWISERS INT
Rule 61    expr -> BITWISENOT expr
Rule 62    expr -> INT
Rule 63    expr -> FLOAT
Rule 64    expr -> STR
Rule 65    expr -> ID
Rule 66    expr -> bool
Rule 67    expr -> LPAREN expr RPAREN
Rule 68    expr -> MINUS expr
Rule 69    bool -> TRUE
Rule 70    bool -> FALSE
Rule 71    paramlist -> paramlist SEP param
Rule 72    paramlist -> param
Rule 73    param -> expr
Rule 74    param -> boolexpr
Rule 75    empty -> <empty>

Terminals, with rules where they appear

ADD_DEV              : 20 21
AND                  : 41
ASSIGN               : 7 8 9 10 29 30
BITWISEAND           : 56
BITWISELS            : 59
BITWISENOT           : 61
BITWISEOR            : 57
BITWISERS            : 60
BITWISEXOR           : 58
CMD                  : 22 23 24 25 26
DEV                  : 4
DIV                  : 53
ELSE                 : 14 15 16
EQUAL                : 48
FALSE                : 70
FLOAT                : 63
FOR                  : 7 8 9 10
GT                   : 46
GTE                  : 47
ID                   : 7 8 9 10 20 21 23 25 29 30 65
IF                   : 11 12 13 14 15
INT                  : 59 60 62
LPAREN               : 67
LT                   : 44
LTE                  : 45
MINUS                : 51 68
MOD                  : 54
MUL                  : 52
NEWLINE              : 3 4 5 6
NOT                  : 43
NOTEQUAL             : 49
OR                   : 42
PLUS                 : 50
POWER                : 55
PRINT                : 33
RETASSIGN            : 23 25
RPAREN               : 67
SEP                  : 71
STEP                 : 10 34
STEPIN               : 31 36
STEPOUT              : 32 38
STR                  : 64
TO                   : 7 8 9 10
TRUE                 : 69
WAIT                 : 27 28
WHILE                : 17 18 19
error                : 6 8 9 10 13 15 19 21 26 28 30

Nonterminals, with rules where they appear

bool                 : 18 66
boolexpr             : 11 14 17 41 41 42 42 43 74
command              : 3 4
empty                : 35 37 39
expr                 : 7 7 8 9 10 10 12 20 27 29 33 34 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 60 61 67 68 73
optlvldec            : 14 15 16
optlvlinc            : 7 8 9 11 12 13 14 15 16 17 18 19
optstep              : 7 8 9
param                : 71 72
paramlist            : 24 25 71
program              : 1 0
relexpr              : 40
statement            : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) statement -> . command NEWLINE
    (4) statement -> . DEV command NEWLINE
    (5) statement -> . NEWLINE
    (6) statement -> . error NEWLINE
    (7) command -> . FOR ID ASSIGN expr TO expr optstep optlvlinc
    (8) command -> . FOR ID ASSIGN error TO expr optstep optlvlinc
    (9) command -> . FOR ID ASSIGN expr TO error optstep optlvlinc
    (10) command -> . FOR ID ASSIGN expr TO expr STEP error
    (11) command -> . IF boolexpr optlvlinc
    (12) command -> . IF expr optlvlinc
    (13) command -> . IF error optlvlinc
    (14) command -> . optlvldec ELSE IF boolexpr optlvlinc
    (15) command -> . optlvldec ELSE IF error optlvlinc
    (16) command -> . optlvldec ELSE optlvlinc
    (17) command -> . WHILE boolexpr optlvlinc
    (18) command -> . WHILE bool optlvlinc
    (19) command -> . WHILE error optlvlinc
    (20) command -> . ADD_DEV ID expr
    (21) command -> . ADD_DEV ID error
    (22) command -> . CMD
    (23) command -> . CMD RETASSIGN ID
    (24) command -> . CMD paramlist
    (25) command -> . CMD paramlist RETASSIGN ID
    (26) command -> . CMD error
    (27) command -> . WAIT expr
    (28) command -> . WAIT error
    (29) command -> . ID ASSIGN expr
    (30) command -> . ID ASSIGN error
    (31) command -> . STEPIN
    (32) command -> . STEPOUT
    (33) command -> . PRINT expr
    (38) optlvldec -> . STEPOUT
    (39) optlvldec -> . empty
    (75) empty -> .

    DEV             shift and go to state 5
    NEWLINE         shift and go to state 4
    error           shift and go to state 6
    FOR             shift and go to state 7
    IF              shift and go to state 9
    WHILE           shift and go to state 11
    ADD_DEV         shift and go to state 12
    CMD             shift and go to state 13
    WAIT            shift and go to state 14
    ID              shift and go to state 8
    STEPIN          shift and go to state 15
    STEPOUT         shift and go to state 16
    PRINT           shift and go to state 17
    ELSE            reduce using rule 75 (empty -> .)

    program                        shift and go to state 1
    statement                      shift and go to state 2
    command                        shift and go to state 3
    optlvldec                      shift and go to state 10
    empty                          shift and go to state 18

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (3) statement -> . command NEWLINE
    (4) statement -> . DEV command NEWLINE
    (5) statement -> . NEWLINE
    (6) statement -> . error NEWLINE
    (7) command -> . FOR ID ASSIGN expr TO expr optstep optlvlinc
    (8) command -> . FOR ID ASSIGN error TO expr optstep optlvlinc
    (9) command -> . FOR ID ASSIGN expr TO error optstep optlvlinc
    (10) command -> . FOR ID ASSIGN expr TO expr STEP error
    (11) command -> . IF boolexpr optlvlinc
    (12) command -> . IF expr optlvlinc
    (13) command -> . IF error optlvlinc
    (14) command -> . optlvldec ELSE IF boolexpr optlvlinc
    (15) command -> . optlvldec ELSE IF error optlvlinc
    (16) command -> . optlvldec ELSE optlvlinc
    (17) command -> . WHILE boolexpr optlvlinc
    (18) command -> . WHILE bool optlvlinc
    (19) command -> . WHILE error optlvlinc
    (20) command -> . ADD_DEV ID expr
    (21) command -> . ADD_DEV ID error
    (22) command -> . CMD
    (23) command -> . CMD RETASSIGN ID
    (24) command -> . CMD paramlist
    (25) command -> . CMD paramlist RETASSIGN ID
    (26) command -> . CMD error
    (27) command -> . WAIT expr
    (28) command -> . WAIT error
    (29) command -> . ID ASSIGN expr
    (30) command -> . ID ASSIGN error
    (31) command -> . STEPIN
    (32) command -> . STEPOUT
    (33) command -> . PRINT expr
    (38) optlvldec -> . STEPOUT
    (39) optlvldec -> . empty
    (75) empty -> .

    DEV             shift and go to state 5
    NEWLINE         shift and go to state 4
    error           shift and go to state 6
    FOR             shift and go to state 7
    IF              shift and go to state 9
    WHILE           shift and go to state 11
    ADD_DEV         shift and go to state 12
    CMD             shift and go to state 13
    WAIT            shift and go to state 14
    ID              shift and go to state 8
    STEPIN          shift and go to state 15
    STEPOUT         shift and go to state 16
    PRINT           shift and go to state 17
    ELSE            reduce using rule 75 (empty -> .)

    statement                      shift and go to state 19
    command                        shift and go to state 3
    optlvldec                      shift and go to state 10
    empty                          shift and go to state 18

state 2

    (2) program -> statement .

    DEV             reduce using rule 2 (program -> statement .)
    NEWLINE         reduce using rule 2 (program -> statement .)
    error           reduce using rule 2 (program -> statement .)
    FOR             reduce using rule 2 (program -> statement .)
    IF              reduce using rule 2 (program -> statement .)
    WHILE           reduce using rule 2 (program -> statement .)
    ADD_DEV         reduce using rule 2 (program -> statement .)
    CMD             reduce using rule 2 (program -> statement .)
    WAIT            reduce using rule 2 (program -> statement .)
    ID              reduce using rule 2 (program -> statement .)
    STEPIN          reduce using rule 2 (program -> statement .)
    STEPOUT         reduce using rule 2 (program -> statement .)
    PRINT           reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)
    ELSE            reduce using rule 2 (program -> statement .)


state 3

    (3) statement -> command . NEWLINE

    NEWLINE         shift and go to state 20


state 4

    (5) statement -> NEWLINE .

    DEV             reduce using rule 5 (statement -> NEWLINE .)
    NEWLINE         reduce using rule 5 (statement -> NEWLINE .)
    error           reduce using rule 5 (statement -> NEWLINE .)
    FOR             reduce using rule 5 (statement -> NEWLINE .)
    IF              reduce using rule 5 (statement -> NEWLINE .)
    WHILE           reduce using rule 5 (statement -> NEWLINE .)
    ADD_DEV         reduce using rule 5 (statement -> NEWLINE .)
    CMD             reduce using rule 5 (statement -> NEWLINE .)
    WAIT            reduce using rule 5 (statement -> NEWLINE .)
    ID              reduce using rule 5 (statement -> NEWLINE .)
    STEPIN          reduce using rule 5 (statement -> NEWLINE .)
    STEPOUT         reduce using rule 5 (statement -> NEWLINE .)
    PRINT           reduce using rule 5 (statement -> NEWLINE .)
    $end            reduce using rule 5 (statement -> NEWLINE .)
    ELSE            reduce using rule 5 (statement -> NEWLINE .)


state 5

    (4) statement -> DEV . command NEWLINE
    (7) command -> . FOR ID ASSIGN expr TO expr optstep optlvlinc
    (8) command -> . FOR ID ASSIGN error TO expr optstep optlvlinc
    (9) command -> . FOR ID ASSIGN expr TO error optstep optlvlinc
    (10) command -> . FOR ID ASSIGN expr TO expr STEP error
    (11) command -> . IF boolexpr optlvlinc
    (12) command -> . IF expr optlvlinc
    (13) command -> . IF error optlvlinc
    (14) command -> . optlvldec ELSE IF boolexpr optlvlinc
    (15) command -> . optlvldec ELSE IF error optlvlinc
    (16) command -> . optlvldec ELSE optlvlinc
    (17) command -> . WHILE boolexpr optlvlinc
    (18) command -> . WHILE bool optlvlinc
    (19) command -> . WHILE error optlvlinc
    (20) command -> . ADD_DEV ID expr
    (21) command -> . ADD_DEV ID error
    (22) command -> . CMD
    (23) command -> . CMD RETASSIGN ID
    (24) command -> . CMD paramlist
    (25) command -> . CMD paramlist RETASSIGN ID
    (26) command -> . CMD error
    (27) command -> . WAIT expr
    (28) command -> . WAIT error
    (29) command -> . ID ASSIGN expr
    (30) command -> . ID ASSIGN error
    (31) command -> . STEPIN
    (32) command -> . STEPOUT
    (33) command -> . PRINT expr
    (38) optlvldec -> . STEPOUT
    (39) optlvldec -> . empty
    (75) empty -> .

    FOR             shift and go to state 7
    IF              shift and go to state 9
    WHILE           shift and go to state 11
    ADD_DEV         shift and go to state 12
    CMD             shift and go to state 13
    WAIT            shift and go to state 14
    ID              shift and go to state 8
    STEPIN          shift and go to state 15
    STEPOUT         shift and go to state 16
    PRINT           shift and go to state 17
    ELSE            reduce using rule 75 (empty -> .)

    command                        shift and go to state 21
    optlvldec                      shift and go to state 10
    empty                          shift and go to state 18

state 6

    (6) statement -> error . NEWLINE

    NEWLINE         shift and go to state 22


state 7

    (7) command -> FOR . ID ASSIGN expr TO expr optstep optlvlinc
    (8) command -> FOR . ID ASSIGN error TO expr optstep optlvlinc
    (9) command -> FOR . ID ASSIGN expr TO error optstep optlvlinc
    (10) command -> FOR . ID ASSIGN expr TO expr STEP error

    ID              shift and go to state 23


state 8

    (29) command -> ID . ASSIGN expr
    (30) command -> ID . ASSIGN error

    ASSIGN          shift and go to state 24


state 9

    (11) command -> IF . boolexpr optlvlinc
    (12) command -> IF . expr optlvlinc
    (13) command -> IF . error optlvlinc
    (40) boolexpr -> . relexpr
    (41) boolexpr -> . boolexpr AND boolexpr
    (42) boolexpr -> . boolexpr OR boolexpr
    (43) boolexpr -> . NOT boolexpr
    (50) expr -> . expr PLUS expr
    (51) expr -> . expr MINUS expr
    (52) expr -> . expr MUL expr
    (53) expr -> . expr DIV expr
    (54) expr -> . expr MOD expr
    (55) expr -> . expr POWER expr
    (56) expr -> . expr BITWISEAND expr
    (57) expr -> . expr BITWISEOR expr
    (58) expr -> . expr BITWISEXOR expr
    (59) expr -> . expr BITWISELS INT
    (60) expr -> . expr BITWISERS INT
    (61) expr -> . BITWISENOT expr
    (62) expr -> . INT
    (63) expr -> . FLOAT
    (64) expr -> . STR
    (65) expr -> . ID
    (66) expr -> . bool
    (67) expr -> . LPAREN expr RPAREN
    (68) expr -> . MINUS expr
    (44) relexpr -> . expr LT expr
    (45) relexpr -> . expr LTE expr
    (46) relexpr -> . expr GT expr
    (47) relexpr -> . expr GTE expr
    (48) relexpr -> . expr EQUAL expr
    (49) relexpr -> . expr NOTEQUAL expr
    (69) bool -> . TRUE
    (70) bool -> . FALSE

    error           shift and go to state 27
    NOT             shift and go to state 29
    BITWISENOT      shift and go to state 32
    INT             shift and go to state 31
    FLOAT           shift and go to state 33
    STR             shift and go to state 34
    ID              shift and go to state 35
    LPAREN          shift and go to state 37
    MINUS           shift and go to state 30
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39

    boolexpr                       shift and go to state 25
    expr                           shift and go to state 26
    relexpr                        shift and go to state 28
    bool                           shift and go to state 36

state 10

    (14) command -> optlvldec . ELSE IF boolexpr optlvlinc
    (15) command -> optlvldec . ELSE IF error optlvlinc
    (16) command -> optlvldec . ELSE optlvlinc

    ELSE            shift and go to state 40


state 11

    (17) command -> WHILE . boolexpr optlvlinc
    (18) command -> WHILE . bool optlvlinc
    (19) command -> WHILE . error optlvlinc
    (40) boolexpr -> . relexpr
    (41) boolexpr -> . boolexpr AND boolexpr
    (42) boolexpr -> . boolexpr OR boolexpr
    (43) boolexpr -> . NOT boolexpr
    (69) bool -> . TRUE
    (70) bool -> . FALSE
    (44) relexpr -> . expr LT expr
    (45) relexpr -> . expr LTE expr
    (46) relexpr -> . expr GT expr
    (47) relexpr -> . expr GTE expr
    (48) relexpr -> . expr EQUAL expr
    (49) relexpr -> . expr NOTEQUAL expr
    (50) expr -> . expr PLUS expr
    (51) expr -> . expr MINUS expr
    (52) expr -> . expr MUL expr
    (53) expr -> . expr DIV expr
    (54) expr -> . expr MOD expr
    (55) expr -> . expr POWER expr
    (56) expr -> . expr BITWISEAND expr
    (57) expr -> . expr BITWISEOR expr
    (58) expr -> . expr BITWISEXOR expr
    (59) expr -> . expr BITWISELS INT
    (60) expr -> . expr BITWISERS INT
    (61) expr -> . BITWISENOT expr
    (62) expr -> . INT
    (63) expr -> . FLOAT
    (64) expr -> . STR
    (65) expr -> . ID
    (66) expr -> . bool
    (67) expr -> . LPAREN expr RPAREN
    (68) expr -> . MINUS expr

    error           shift and go to state 43
    NOT             shift and go to state 29
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    BITWISENOT      shift and go to state 32
    INT             shift and go to state 31
    FLOAT           shift and go to state 33
    STR             shift and go to state 34
    ID              shift and go to state 35
    LPAREN          shift and go to state 37
    MINUS           shift and go to state 30

    boolexpr                       shift and go to state 41
    bool                           shift and go to state 42
    relexpr                        shift and go to state 28
    expr                           shift and go to state 44

state 12

    (20) command -> ADD_DEV . ID expr
    (21) command -> ADD_DEV . ID error

    ID              shift and go to state 45


state 13

    (22) command -> CMD .
    (23) command -> CMD . RETASSIGN ID
    (24) command -> CMD . paramlist
    (25) command -> CMD . paramlist RETASSIGN ID
    (26) command -> CMD . error
    (71) paramlist -> . paramlist SEP param
    (72) paramlist -> . param
    (73) param -> . expr
    (74) param -> . boolexpr
    (50) expr -> . expr PLUS expr
    (51) expr -> . expr MINUS expr
    (52) expr -> . expr MUL expr
    (53) expr -> . expr DIV expr
    (54) expr -> . expr MOD expr
    (55) expr -> . expr POWER expr
    (56) expr -> . expr BITWISEAND expr
    (57) expr -> . expr BITWISEOR expr
    (58) expr -> . expr BITWISEXOR expr
    (59) expr -> . expr BITWISELS INT
    (60) expr -> . expr BITWISERS INT
    (61) expr -> . BITWISENOT expr
    (62) expr -> . INT
    (63) expr -> . FLOAT
    (64) expr -> . STR
    (65) expr -> . ID
    (66) expr -> . bool
    (67) expr -> . LPAREN expr RPAREN
    (68) expr -> . MINUS expr
    (40) boolexpr -> . relexpr
    (41) boolexpr -> . boolexpr AND boolexpr
    (42) boolexpr -> . boolexpr OR boolexpr
    (43) boolexpr -> . NOT boolexpr
    (69) bool -> . TRUE
    (70) bool -> . FALSE
    (44) relexpr -> . expr LT expr
    (45) relexpr -> . expr LTE expr
    (46) relexpr -> . expr GT expr
    (47) relexpr -> . expr GTE expr
    (48) relexpr -> . expr EQUAL expr
    (49) relexpr -> . expr NOTEQUAL expr

    NEWLINE         reduce using rule 22 (command -> CMD .)
    RETASSIGN       shift and go to state 46
    error           shift and go to state 48
    BITWISENOT      shift and go to state 32
    INT             shift and go to state 31
    FLOAT           shift and go to state 33
    STR             shift and go to state 34
    ID              shift and go to state 35
    LPAREN          shift and go to state 37
    MINUS           shift and go to state 30
    NOT             shift and go to state 29
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39

    paramlist                      shift and go to state 47
    param                          shift and go to state 49
    expr                           shift and go to state 50
    boolexpr                       shift and go to state 51
    bool                           shift and go to state 36
    relexpr                        shift and go to state 28

state 14

    (27) command -> WAIT . expr
    (28) command -> WAIT . error
    (50) expr -> . expr PLUS expr
    (51) expr -> . expr MINUS expr
    (52) expr -> . expr MUL expr
    (53) expr -> . expr DIV expr
    (54) expr -> . expr MOD expr
    (55) expr -> . expr POWER expr
    (56) expr -> . expr BITWISEAND expr
    (57) expr -> . expr BITWISEOR expr
    (58) expr -> . expr BITWISEXOR expr
    (59) expr -> . expr BITWISELS INT
    (60) expr -> . expr BITWISERS INT
    (61) expr -> . BITWISENOT expr
    (62) expr -> . INT
    (63) expr -> . FLOAT
    (64) expr -> . STR
    (65) expr -> . ID
    (66) expr -> . bool
    (67) expr -> . LPAREN expr RPAREN
    (68) expr -> . MINUS expr
    (69) bool -> . TRUE
    (70) bool -> . FALSE

    error           shift and go to state 53
    BITWISENOT      shift and go to state 32
    INT             shift and go to state 31
    FLOAT           shift and go to state 33
    STR             shift and go to state 34
    ID              shift and go to state 35
    LPAREN          shift and go to state 37
    MINUS           shift and go to state 30
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39

    expr                           shift and go to state 52
    bool                           shift and go to state 36

state 15

    (31) command -> STEPIN .

    NEWLINE         reduce using rule 31 (command -> STEPIN .)


state 16

    (32) command -> STEPOUT .
    (38) optlvldec -> STEPOUT .

    NEWLINE         reduce using rule 32 (command -> STEPOUT .)
    ELSE            reduce using rule 38 (optlvldec -> STEPOUT .)


state 17

    (33) command -> PRINT . expr
    (50) expr -> . expr PLUS expr
    (51) expr -> . expr MINUS expr
    (52) expr -> . expr MUL expr
    (53) expr -> . expr DIV expr
    (54) expr -> . expr MOD expr
    (55) expr -> . expr POWER expr
    (56) expr -> . expr BITWISEAND expr
    (57) expr -> . expr BITWISEOR expr
    (58) expr -> . expr BITWISEXOR expr
    (59) expr -> . expr BITWISELS INT
    (60) expr -> . expr BITWISERS INT
    (61) expr -> . BITWISENOT expr
    (62) expr -> . INT
    (63) expr -> . FLOAT
    (64) expr -> . STR
    (65) expr -> . ID
    (66) expr -> . bool
    (67) expr -> . LPAREN expr RPAREN
    (68) expr -> . MINUS expr
    (69) bool -> . TRUE
    (70) bool -> . FALSE

    BITWISENOT      shift and go to state 32
    INT             shift and go to state 31
    FLOAT           shift and go to state 33
    STR             shift and go to state 34
    ID              shift and go to state 35
    LPAREN          shift and go to state 37
    MINUS           shift and go to state 30
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39

    expr                           shift and go to state 54
    bool                           shift and go to state 36

state 18

    (39) optlvldec -> empty .

    ELSE            reduce using rule 39 (optlvldec -> empty .)


state 19

    (1) program -> program statement .

    DEV             reduce using rule 1 (program -> program statement .)
    NEWLINE         reduce using rule 1 (program -> program statement .)
    error           reduce using rule 1 (program -> program statement .)
    FOR             reduce using rule 1 (program -> program statement .)
    IF              reduce using rule 1 (program -> program statement .)
    WHILE           reduce using rule 1 (program -> program statement .)
    ADD_DEV         reduce using rule 1 (program -> program statement .)
    CMD             reduce using rule 1 (program -> program statement .)
    WAIT            reduce using rule 1 (program -> program statement .)
    ID              reduce using rule 1 (program -> program statement .)
    STEPIN          reduce using rule 1 (program -> program statement .)
    STEPOUT         reduce using rule 1 (program -> program statement .)
    PRINT           reduce using rule 1 (program -> program statement .)
    $end            reduce using rule 1 (program -> program statement .)
    ELSE            reduce using rule 1 (program -> program statement .)


state 20

    (3) statement -> command NEWLINE .

    DEV             reduce using rule 3 (statement -> command NEWLINE .)
    NEWLINE         reduce using rule 3 (statement -> command NEWLINE .)
    error           reduce using rule 3 (statement -> command NEWLINE .)
    FOR             reduce using rule 3 (statement -> command NEWLINE .)
    IF              reduce using rule 3 (statement -> command NEWLINE .)
    WHILE           reduce using rule 3 (statement -> command NEWLINE .)
    ADD_DEV         reduce using rule 3 (statement -> command NEWLINE .)
    CMD             reduce using rule 3 (statement -> command NEWLINE .)
    WAIT            reduce using rule 3 (statement -> command NEWLINE .)
    ID              reduce using rule 3 (statement -> command NEWLINE .)
    STEPIN          reduce using rule 3 (statement -> command NEWLINE .)
    STEPOUT         reduce using rule 3 (statement -> command NEWLINE .)
    PRINT           reduce using rule 3 (statement -> command NEWLINE .)
    $end            reduce using rule 3 (statement -> command NEWLINE .)
    ELSE            reduce using rule 3 (statement -> command NEWLINE .)


state 21

    (4) statement -> DEV command . NEWLINE

    NEWLINE         shift and go to state 55

